cabal-version: 3.0
name: ouroboros-consensus
version: 0.23.0.0
synopsis: Consensus layer for the Ouroboros blockchain protocol
description: Consensus layer for the Ouroboros blockchain protocol.
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

copyright:
  2019-2023 Input Output Global Inc (IOG), INTERSECT 2023-2024.

author: IOG Engineering Team
maintainer: operations@iohk.io
category: Network
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  docs/haddocks/*.svg

source-repository head
  type: git
  location: https://github.com/IntersectMBO/ouroboros-consensus

flag asserts
  description: Enable assertions
  manual: False
  default: False

common common-lib
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wunused-packages
    -Wno-unticked-promoted-constructors

  if flag(asserts)
    ghc-options: -fno-ignore-asserts
    cpp-options: -DENABLE_ASSERTIONS

common common-test
  import: common-lib
  ghc-options:
    -threaded
    -rtsopts

common common-bench
  import: common-test
  ghc-options:
    -threaded
    -rtsopts

  -- We use this option to avoid skewed results due to changes in cache-line
  -- alignment. See
  -- https://github.com/Bodigrim/tasty-bench#comparison-against-baseline
  if impl(ghc >=8.6)
    ghc-options: -fproc-alignment=64

library
  import: common-lib
  hs-source-dirs: src/ouroboros-consensus
  exposed-modules:
    Ouroboros.Consensus.Block
    Ouroboros.Consensus.Block.Abstract
    Ouroboros.Consensus.Block.EBB
    Ouroboros.Consensus.Block.Forging
    Ouroboros.Consensus.Block.NestedContent
    Ouroboros.Consensus.Block.RealPoint
    Ouroboros.Consensus.Block.SupportsDiffusionPipelining
    Ouroboros.Consensus.Block.SupportsMetrics
    Ouroboros.Consensus.Block.SupportsProtocol
    Ouroboros.Consensus.Block.SupportsSanityCheck
    Ouroboros.Consensus.BlockchainTime
    Ouroboros.Consensus.BlockchainTime.API
    Ouroboros.Consensus.BlockchainTime.WallClock.Default
    Ouroboros.Consensus.BlockchainTime.WallClock.HardFork
    Ouroboros.Consensus.BlockchainTime.WallClock.Simple
    Ouroboros.Consensus.BlockchainTime.WallClock.Types
    Ouroboros.Consensus.BlockchainTime.WallClock.Util
    Ouroboros.Consensus.Config
    Ouroboros.Consensus.Config.SecurityParam
    Ouroboros.Consensus.Config.SupportsNode
    Ouroboros.Consensus.Forecast
    Ouroboros.Consensus.Fragment.Diff
    Ouroboros.Consensus.Fragment.Validated
    Ouroboros.Consensus.Fragment.ValidatedDiff
    Ouroboros.Consensus.Genesis.Governor
    Ouroboros.Consensus.HardFork.Abstract
    Ouroboros.Consensus.HardFork.Combinator
    Ouroboros.Consensus.HardFork.Combinator.Abstract
    Ouroboros.Consensus.HardFork.Combinator.Abstract.CanHardFork
    Ouroboros.Consensus.HardFork.Combinator.Abstract.NoHardForks
    Ouroboros.Consensus.HardFork.Combinator.Abstract.SingleEraBlock
    Ouroboros.Consensus.HardFork.Combinator.AcrossEras
    Ouroboros.Consensus.HardFork.Combinator.Basics
    Ouroboros.Consensus.HardFork.Combinator.Block
    Ouroboros.Consensus.HardFork.Combinator.Compat
    Ouroboros.Consensus.HardFork.Combinator.Condense
    Ouroboros.Consensus.HardFork.Combinator.Degenerate
    Ouroboros.Consensus.HardFork.Combinator.Embed.Binary
    Ouroboros.Consensus.HardFork.Combinator.Embed.Nary
    Ouroboros.Consensus.HardFork.Combinator.Embed.Unary
    Ouroboros.Consensus.HardFork.Combinator.Forging
    Ouroboros.Consensus.HardFork.Combinator.Info
    Ouroboros.Consensus.HardFork.Combinator.InjectTxs
    Ouroboros.Consensus.HardFork.Combinator.Ledger
    Ouroboros.Consensus.HardFork.Combinator.Ledger.CommonProtocolParams
    Ouroboros.Consensus.HardFork.Combinator.Ledger.PeerSelection
    Ouroboros.Consensus.HardFork.Combinator.Ledger.Query
    Ouroboros.Consensus.HardFork.Combinator.Lifting
    Ouroboros.Consensus.HardFork.Combinator.Mempool
    Ouroboros.Consensus.HardFork.Combinator.Node
    Ouroboros.Consensus.HardFork.Combinator.Node.DiffusionPipelining
    Ouroboros.Consensus.HardFork.Combinator.Node.InitStorage
    Ouroboros.Consensus.HardFork.Combinator.Node.Metrics
    Ouroboros.Consensus.HardFork.Combinator.Node.SanityCheck
    Ouroboros.Consensus.HardFork.Combinator.PartialConfig
    Ouroboros.Consensus.HardFork.Combinator.Protocol
    Ouroboros.Consensus.HardFork.Combinator.Protocol.ChainSel
    Ouroboros.Consensus.HardFork.Combinator.Protocol.LedgerView
    Ouroboros.Consensus.HardFork.Combinator.Serialisation
    Ouroboros.Consensus.HardFork.Combinator.Serialisation.Common
    Ouroboros.Consensus.HardFork.Combinator.Serialisation.SerialiseDisk
    Ouroboros.Consensus.HardFork.Combinator.Serialisation.SerialiseNodeToClient
    Ouroboros.Consensus.HardFork.Combinator.Serialisation.SerialiseNodeToNode
    Ouroboros.Consensus.HardFork.Combinator.State
    Ouroboros.Consensus.HardFork.Combinator.State.Infra
    Ouroboros.Consensus.HardFork.Combinator.State.Instances
    Ouroboros.Consensus.HardFork.Combinator.State.Lift
    Ouroboros.Consensus.HardFork.Combinator.State.Types
    Ouroboros.Consensus.HardFork.Combinator.Translation
    Ouroboros.Consensus.HardFork.History
    Ouroboros.Consensus.HardFork.History.Caching
    Ouroboros.Consensus.HardFork.History.EpochInfo
    Ouroboros.Consensus.HardFork.History.EraParams
    Ouroboros.Consensus.HardFork.History.Qry
    Ouroboros.Consensus.HardFork.History.Summary
    Ouroboros.Consensus.HardFork.History.Util
    Ouroboros.Consensus.HardFork.Simple
    Ouroboros.Consensus.HeaderStateHistory
    Ouroboros.Consensus.HeaderValidation
    Ouroboros.Consensus.Ledger.Abstract
    Ouroboros.Consensus.Ledger.Basics
    Ouroboros.Consensus.Ledger.CommonProtocolParams
    Ouroboros.Consensus.Ledger.Dual
    Ouroboros.Consensus.Ledger.Extended
    Ouroboros.Consensus.Ledger.Inspect
    Ouroboros.Consensus.Ledger.Query
    Ouroboros.Consensus.Ledger.Query.Version
    Ouroboros.Consensus.Ledger.SupportsMempool
    Ouroboros.Consensus.Ledger.SupportsPeerSelection
    Ouroboros.Consensus.Ledger.SupportsProtocol
    Ouroboros.Consensus.Mempool
    Ouroboros.Consensus.Mempool.API
    Ouroboros.Consensus.Mempool.Capacity
    Ouroboros.Consensus.Mempool.Impl.Common
    Ouroboros.Consensus.Mempool.Init
    Ouroboros.Consensus.Mempool.Query
    Ouroboros.Consensus.Mempool.TxSeq
    Ouroboros.Consensus.Mempool.Update
    Ouroboros.Consensus.MiniProtocol.BlockFetch.ClientInterface
    Ouroboros.Consensus.MiniProtocol.BlockFetch.Server
    Ouroboros.Consensus.MiniProtocol.ChainSync.Client
    Ouroboros.Consensus.MiniProtocol.ChainSync.Client.HistoricityCheck
    Ouroboros.Consensus.MiniProtocol.ChainSync.Client.InFutureCheck
    Ouroboros.Consensus.MiniProtocol.ChainSync.Client.Jumping
    Ouroboros.Consensus.MiniProtocol.ChainSync.Client.State
    Ouroboros.Consensus.MiniProtocol.ChainSync.Server
    Ouroboros.Consensus.MiniProtocol.LocalStateQuery.Server
    Ouroboros.Consensus.MiniProtocol.LocalTxMonitor.Server
    Ouroboros.Consensus.MiniProtocol.LocalTxSubmission.Server
    Ouroboros.Consensus.Node.GsmState
    Ouroboros.Consensus.Node.InitStorage
    Ouroboros.Consensus.Node.NetworkProtocolVersion
    Ouroboros.Consensus.Node.ProtocolInfo
    Ouroboros.Consensus.Node.Run
    Ouroboros.Consensus.Node.Serialisation
    Ouroboros.Consensus.NodeId
    Ouroboros.Consensus.Protocol.Abstract
    Ouroboros.Consensus.Protocol.BFT
    Ouroboros.Consensus.Protocol.LeaderSchedule
    Ouroboros.Consensus.Protocol.MockChainSel
    Ouroboros.Consensus.Protocol.ModChainSel
    Ouroboros.Consensus.Protocol.PBFT
    Ouroboros.Consensus.Protocol.PBFT.Crypto
    Ouroboros.Consensus.Protocol.PBFT.State
    Ouroboros.Consensus.Protocol.Signed
    Ouroboros.Consensus.Storage.ChainDB
    Ouroboros.Consensus.Storage.ChainDB.API
    Ouroboros.Consensus.Storage.ChainDB.API.Types.InvalidBlockPunishment
    Ouroboros.Consensus.Storage.ChainDB.Impl
    Ouroboros.Consensus.Storage.ChainDB.Impl.Args
    Ouroboros.Consensus.Storage.ChainDB.Impl.Background
    Ouroboros.Consensus.Storage.ChainDB.Impl.BlockCache
    Ouroboros.Consensus.Storage.ChainDB.Impl.ChainSel
    Ouroboros.Consensus.Storage.ChainDB.Impl.Follower
    Ouroboros.Consensus.Storage.ChainDB.Impl.Iterator
    Ouroboros.Consensus.Storage.ChainDB.Impl.LgrDB
    Ouroboros.Consensus.Storage.ChainDB.Impl.Paths
    Ouroboros.Consensus.Storage.ChainDB.Impl.Query
    Ouroboros.Consensus.Storage.ChainDB.Impl.Types
    Ouroboros.Consensus.Storage.ChainDB.Init
    Ouroboros.Consensus.Storage.Common
    Ouroboros.Consensus.Storage.ImmutableDB
    Ouroboros.Consensus.Storage.ImmutableDB.API
    Ouroboros.Consensus.Storage.ImmutableDB.Chunks
    Ouroboros.Consensus.Storage.ImmutableDB.Chunks.Internal
    Ouroboros.Consensus.Storage.ImmutableDB.Chunks.Layout
    Ouroboros.Consensus.Storage.ImmutableDB.Impl
    Ouroboros.Consensus.Storage.ImmutableDB.Impl.Index
    Ouroboros.Consensus.Storage.ImmutableDB.Impl.Index.Cache
    Ouroboros.Consensus.Storage.ImmutableDB.Impl.Index.Primary
    Ouroboros.Consensus.Storage.ImmutableDB.Impl.Index.Secondary
    Ouroboros.Consensus.Storage.ImmutableDB.Impl.Iterator
    Ouroboros.Consensus.Storage.ImmutableDB.Impl.Parser
    Ouroboros.Consensus.Storage.ImmutableDB.Impl.State
    Ouroboros.Consensus.Storage.ImmutableDB.Impl.Types
    Ouroboros.Consensus.Storage.ImmutableDB.Impl.Util
    Ouroboros.Consensus.Storage.ImmutableDB.Impl.Validation
    Ouroboros.Consensus.Storage.ImmutableDB.Stream
    Ouroboros.Consensus.Storage.LedgerDB
    Ouroboros.Consensus.Storage.LedgerDB.DiskPolicy
    Ouroboros.Consensus.Storage.LedgerDB.Init
    Ouroboros.Consensus.Storage.LedgerDB.LedgerDB
    Ouroboros.Consensus.Storage.LedgerDB.Query
    Ouroboros.Consensus.Storage.LedgerDB.Snapshots
    Ouroboros.Consensus.Storage.LedgerDB.Update
    Ouroboros.Consensus.Storage.Serialisation
    Ouroboros.Consensus.Storage.VolatileDB
    Ouroboros.Consensus.Storage.VolatileDB.API
    Ouroboros.Consensus.Storage.VolatileDB.Impl
    Ouroboros.Consensus.Storage.VolatileDB.Impl.FileInfo
    Ouroboros.Consensus.Storage.VolatileDB.Impl.Index
    Ouroboros.Consensus.Storage.VolatileDB.Impl.Parser
    Ouroboros.Consensus.Storage.VolatileDB.Impl.State
    Ouroboros.Consensus.Storage.VolatileDB.Impl.Types
    Ouroboros.Consensus.Storage.VolatileDB.Impl.Util
    Ouroboros.Consensus.Ticked
    Ouroboros.Consensus.TypeFamilyWrappers
    Ouroboros.Consensus.Util
    Ouroboros.Consensus.Util.AnchoredFragment
    Ouroboros.Consensus.Util.Args
    Ouroboros.Consensus.Util.Assert
    Ouroboros.Consensus.Util.CBOR
    Ouroboros.Consensus.Util.CallStack
    Ouroboros.Consensus.Util.Condense
    Ouroboros.Consensus.Util.DepPair
    Ouroboros.Consensus.Util.EarlyExit
    Ouroboros.Consensus.Util.Enclose
    Ouroboros.Consensus.Util.FileLock
    Ouroboros.Consensus.Util.HList
    Ouroboros.Consensus.Util.IOLike
    Ouroboros.Consensus.Util.LeakyBucket
    Ouroboros.Consensus.Util.MonadSTM.NormalForm
    Ouroboros.Consensus.Util.MonadSTM.StrictSVar
    Ouroboros.Consensus.Util.NormalForm.StrictMVar
    Ouroboros.Consensus.Util.NormalForm.StrictTVar
    Ouroboros.Consensus.Util.Orphans
    Ouroboros.Consensus.Util.RedundantConstraints
    Ouroboros.Consensus.Util.STM
    Ouroboros.Consensus.Util.Time
    Ouroboros.Consensus.Util.Versioned

  build-depends:
    base >=4.14 && <4.22,
    base-deriving-via,
    base16-bytestring,
    bimap >=0.4 && <0.6,
    binary >=0.8 && <0.11,
    bytestring >=0.10 && <0.13,
    cardano-binary,
    cardano-crypto-class,
    cardano-ledger-core ^>=1.17,
    cardano-prelude,
    cardano-slotting,
    cardano-strict-containers,
    cborg ^>=0.2.2,
    containers >=0.5 && <0.8,
    contra-tracer,
    deepseq,
    filelock,
    fs-api ^>=0.3,
    hashable,
    io-classes ^>=1.5,
    measures,
    mtl,
    multiset ^>=0.3,
    nothunks ^>=0.2,
    ouroboros-network-api ^>=0.13,
    ouroboros-network-mock ^>=0.1,
    ouroboros-network-protocols ^>=0.14,
    primitive,
    psqueues ^>=0.2.3,
    quiet ^>=0.2,
    rawlock ^>=0.1,
    resource-registry ^>=0.1,
    semialign >=1.1,
    serialise ^>=0.2,
    si-timers ^>=1.5,
    small-steps ^>=1.1,
    sop-core ^>=0.5,
    sop-extras ^>=0.2,
    streaming,
    strict >=0.1 && <0.6,
    strict-checked-vars ^>=0.2,
    strict-mvar ^>=1.5,
    strict-sop-core ^>=0.1,
    strict-stm ^>=1.5,
    text,
    these ^>=1.2,
    time,
    transformers,
    typed-protocols ^>=0.3,
    vector ^>=0.13,

  -- GHC 8.10.7 on aarch64-darwin cannot use text-2
  build-depends: text >=1.2.5.0 && <2.2
  x-docspec-extra-packages:
    directory
    latex-svg-image
