cabal-version: 3.0
name: peras-cert-conjuring
version: 0.1.0.0

extra-source-files:
  static/cert-conjuring-server/index.html

common common-lib
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wunused-packages
    -Wno-unticked-promoted-constructors

common common-exe
  import: common-lib
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -I0 -A16m"

library
  import: common-lib
  hs-source-dirs: src
  exposed-modules:
    CertConjuring
  build-depends:
    base,
    containers,
    scotty,
    QuickCheck,
    wai-extra,
    http-types,
    aeson

executable cert-conjuring-server
  import: common-exe
  hs-source-dirs: app
  main-is: cert-conjuring-server.hs
  build-depends:
    base,
    peras-cert-conjuring
