cabal-version: 3.0

name:                   unsoundswitch
version:                0.1.0.0
synopsis:               Unsound switch
description:            Unsound switch.
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
copyright:              2020-2023 Input Output Global Inc (IOG), INTERSECT 2023-2024.
author:                 IOG Engineering Team
maintainer:             operations@iohk.io
category:               Network

executable unsoundswitch
    main-is:          UnsoundSwitch.hs
    build-depends:    base ^>=4.14.1.0
                    , logfloat
                    , statistics
    default-language: Haskell2010
    ghc-options:      -Wall
